# touchenv

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  release-cli.yml  release-go.yml  release-node.yml  release-python.yml
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/src/: cli.ts  crypto.ts  format.ts  kdf.ts  keychain.ts  parser.ts  prompt.ts
cli/src/commands/: decrypt.ts  edit.ts  export.ts  get.ts  import.ts  init.ts  list.ts  set.ts
cli/test/: commands.test.ts  crypto.test.ts  format.test.ts  parser.test.ts  portable.test.ts
docs/: ci-integration.md  getting-started.md  migration-from-dotenv.md
samples/cli/: README.md  demo.sh
samples/go/: README.md  go.mod  main.go
samples/node/: .npmrc  README.md  app.js  package-lock.json  package.json
samples/python/: README.md  app.py  requirements.txt
sdks/go/: crypto.go  format.go  go.mod  parser.go  touchenv.go  touchenv_test.go
sdks/node/: README.md  package-lock.json  package.json  tsconfig.json
sdks/node/src/: crypto.ts  format.ts  index.ts  keychain.ts  parser.ts
sdks/node/test/: config.test.ts  crypto.test.ts  format.test.ts  parser.test.ts  vectors.test.ts
sdks/python/: pyproject.toml
sdks/python/src/touchenv/: __init__.py  crypto.py  format.py  parser.py
sdks/python/tests/: test_crypto.py  test_format.py  test_load.py  test_parser.py  test_vectors.py
spec/: FORMAT.md  SECURITY.md
spec/test-vectors/: all-vectors.json  basic.json  generate.mjs  multiline.json  portable.json  unicode.json
swift/: Package.swift
(+2 files in other folders)
