[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "touchenv"
version = "0.1.0"
description = "touchenv SDK for Python — drop-in python-dotenv replacement"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["cryptography>=41.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
